<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <LinearLayout
        android:id="@+id/categories_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/happy"
            style="@style/categoryTitle"
            android:background="@color/happy"
            android:text="@string/happy" />

        <TextView
            android:id="@+id/neutral"
            style="@style/categoryTitle"
            android:background="@color/neutral"
            android:text="@string/neutral" />

        <TextView
            android:id="@+id/sad"
            style="@style/categoryTitle"
            android:background="@color/sad"
            android:text="@string/sad" />

        <TextView
            style="@style/description"
            android:layout_below="@id/categories_list"
            android:layout_weight="2"
            android:text="@string/main_description" />

        <TextView
            android:id="@+id/shop"
            style="@style/categoryTitle"
            android:layout_alignParentBottom="true"
            android:text="@string/shop" />
    </LinearLayout>
</ScrollView>
